feat: closing listing and reopening
